--- a/margin-and-padding/margin-and-padding-1/style.css
+++ b/margin-and-padding/margin-and-padding-1/style.css
@@ -1,28 +1,38 @@
 body {
+  background-color: yellow;
   max-width: 600px;
   margin: 0 auto;
+  
 }
 
+/* Box Model 
+  - Margin
+  - Border -width, style, color
+  - Padding
+*/
+
 .one {
-  background: pink;
-  border: 3px solid blue;
-  /* CHANGE ME */
-  padding: 0px;
-  margin: 0px;
+
+  background-color: pink;
+
+  margin: 10px;
+  padding: 30px;
+  border: 4px solid blue;
 }
 
 .two {
-  background: lightblue;
-  border: 3px solid purple;
-  /* CHANGE ME */
-  margin-bottom: 0px;
+
+  background-color: rgb(107, 211, 230);
+  border: 4px solid brown;
+  margin-bottom: 40px;
 }
 
 .three {
-  background: peachpuff;
-  border: 3px solid brown;
+
+  background-color: rgb(240, 209, 159);
+  border: 4px solid brown;
+
   width: 200px;
-  /* CHANGE ME */
-  padding: 0px;
-  margin-left: 0px;
+  padding: 25px;
+  margin-left: auto;
 }
